working on problem 3

--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "254aa202",
+   "id": "c0386256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de203ae",
+   "id": "32d821f0",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "7d4122ee",
+   "execution_count": 2,
+   "id": "18e0ea6e",
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,14 @@
       "Steel_2_Produced_At_Mill_2 = 382.35294\n",
       "Steel_3_Produced_At_Mill_1 = 0.0\n",
       "Steel_3_Produced_At_Mill_2 = 300.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
      ]
     }
    ],
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79cfaa42",
+   "id": "da8af883",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -163,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f345ad81",
+   "id": "a0d8033a",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -188,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "e346c70d",
+   "execution_count": 14,
+   "id": "ecd32769",
    "metadata": {},
    "outputs": [
     {
@@ -197,28 +205,26 @@
      "output_type": "stream",
      "text": [
       "Status: Optimal\n",
-      "Maximum Cash on Hand in Month 5: $627.39\n",
+      "****************************************\n",
+      "Maximum Cash on Hand at the beginning of Month 5: $377.39\n",
+      "This is the amount we had at the end of the fourth month, $627.39, less the $250 Month 4 Bill\n",
+      "****************************************\n",
       "Cash_to_Invest_Month_1_for_four_months = $200.60\n",
       "Cash_to_Invest_Month_1_for_one_month = $599.40\n",
       "Cash_to_Invest_Month_1_for_three_months = $0.00\n",
       "Cash_to_Invest_Month_1_for_two_months = $0.00\n",
-      "Cash_to_Invest_Month_2_for_four_months = $0.00\n",
       "Cash_to_Invest_Month_2_for_one_month = $495.05\n",
       "Cash_to_Invest_Month_2_for_three_months = $107.23\n",
       "Cash_to_Invest_Month_2_for_two_months = $197.72\n",
-      "Cash_to_Invest_Month_3_for_four_months = $0.00\n",
       "Cash_to_Invest_Month_3_for_one_month = $300.00\n",
-      "Cash_to_Invest_Month_3_for_three_months = $0.00\n",
       "Cash_to_Invest_Month_3_for_two_months = $0.00\n",
-      "Cash_to_Invest_Month_4_for_four_months = $0.00\n",
-      "Cash_to_Invest_Month_4_for_one_month = $300.00\n",
-      "Cash_to_Invest_Month_4_for_three_months = $0.00\n",
-      "Cash_to_Invest_Month_4_for_two_months = $0.00\n"
+      "Cash_to_Invest_Month_4_for_one_month = $300.00\n"
      ]
     }
    ],
    "source": [
     "# Set up the variables\n",
+    "## We only need 10 variables because we don't care about beyond the beginning of the 5th month\n",
     "month_1_for_one_month = LpVariable(\"Cash to Invest Month 1 for one month\", 0, None)\n",
     "month_1_for_two_month = LpVariable(\"Cash to Invest Month 1 for two months\", 0, None)\n",
     "month_1_for_three_month = LpVariable(\"Cash to Invest Month 1 for three months\", 0, None)\n",
@@ -243,32 +249,33 @@
     "# Constraints\n",
     "# Revenue to Invest\n",
     "fc += (month_1_for_one_month + month_1_for_two_month + month_1_for_three_month + \n",
-    "       month_1_for_four_month <= 800, \"Beginning of Month 1 has 400 Dollars from Revenue to Invest and 400 Cash\")\n",
+    "       month_1_for_four_month <= 800, \n",
+    "       \"Beginning of Month 1 has 400 Dollars from Revenue to Invest and 400 Cash\")\n",
     "\n",
-    "fc += (month_2_for_one_month + month_2_for_two_month + month_2_for_three_month + \n",
-    "       month_2_for_four_month <= 800, \"Beginning of Month 2 has 800 Dollars to Invest\")\n",
+    "fc += (month_2_for_one_month + month_2_for_two_month + month_2_for_three_month <= 800, \n",
+    "       \"Beginning of Month 2 has 800 Dollars to Invest, plus any money left from a one-month investment after paying our Month 1 Bill\")\n",
     "\n",
-    "fc += (month_3_for_one_month + month_3_for_two_month + month_3_for_three_month + \n",
-    "       month_3_for_four_month <= 300, \"Beginning of Month 3 has 300 Dollars to Invest\")\n",
+    "fc += (month_3_for_one_month + month_3_for_two_month <= 300, \n",
+    "       \"Beginning of Month 3 has 300 Dollars to Invest, plus any money left investments after paying our Month 1 and 2 Bills\")\n",
     "\n",
-    "fc += (month_4_for_one_month + month_4_for_two_month + month_4_for_three_month + \n",
-    "       month_4_for_four_month <= 300, \"Beginning of Month 4 has 300 Dollars to Invest\")\n",
+    "fc += (month_4_for_one_month <= 300, \n",
+    "       \"Beginning of Month 4 has 300 Dollars to Invest, plus any money left investments after paying our Month 1, 2 and 3 Bills\")\n",
     "\n",
     "\n",
     "# Bills to Pay\n",
     "fc += ((1.001*month_1_for_one_month) >= 600, \n",
-    "       \"End of Month 1 has a 600 Dollar Bill\")\n",
+    "       \"End of Month 1has a Bill that is 600 Dollars\")\n",
     "\n",
     "fc += ((1.001*month_1_for_two_month) + (1.01*month_2_for_one_month) >= 500, \n",
-    "       \"End of Month 2 has a 500 Dollar Bill\")\n",
+    "       \"End of Month 2 has a Bill that is 500 Dollars\")\n",
     "\n",
     "fc += ((1.03*month_1_for_three_month) + (1.01*month_2_for_two_month) + \n",
     "       (1.001*month_3_for_one_month)  >= 500, \n",
-    "       \"End of Month 3 has a 500 Dollar Bill\")\n",
+    "       \"End of Month 3 has a Bill that is 500 Dollars\")\n",
     "\n",
     "fc += ((1.08*month_1_for_four_month) + (1.03*month_2_for_three_month) + \n",
     "       (1.01*month_3_for_two_month) + (1.001*month_4_for_one_month) >= 250, \n",
-    "       \"End of Month 4 has a 250 Dollar Bill\")\n",
+    "       \"End of Month 4 has a Bill that is 250 Dollars\")\n",
     "\n",
     "\n",
     "## Greater than 0 constraints\n",
@@ -280,14 +287,18 @@
     "\n",
     "# Print the solution\n",
     "print(f\"Status: {LpStatus[status]}\")\n",
-    "print(f\"Maximum Cash on Hand in Month 5: {'${:,.2f}'.format(value(fc.objective))}\") \n",
+    "print(\"*\"*40)\n",
+    "print(f\"Maximum Cash on Hand at the beginning of Month 5: {'${:,.2f}'.format(value(fc.objective)-250)}\")\n",
+    "print(f\"This is the amount we had at the end of the fourth month, {'${:,.2f}'.format(value(fc.objective))}, less the $250 Month 4 Bill\")\n",
+    "print(\"*\"*40)\n",
     "for v in fc.variables():\n",
-    "    print(f\"{v.name} = {'${:,.2f}'.format(value(v.varValue + 0))}\") # + 0 ensures no negative zeros"
+    "    print(f\"{v.name} = {'${:,.2f}'.format(value(v.varValue + 0))}\") # + 0 ensures no negative zeros\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ecbfb87a",
+   "id": "3b501c7e",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -306,8 +317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "e2d3ba19",
+   "execution_count": 7,
+   "id": "0e454d52",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb870131",
+   "id": "8c7ebdf6",
    "metadata": {},
    "source": [
     "### Question 5: \n",
@@ -401,8 +412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "6fdc7ac4",
+   "execution_count": 8,
+   "id": "6bfc0891",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "388e7ef5",
+   "id": "f4c3835b",
    "metadata": {},
    "outputs": [],
    "source": []
