--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c0386256",
+   "id": "40f6d48f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d821f0",
+   "id": "2df4b729",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "18e0ea6e",
+   "id": "c06d80bd",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da8af883",
+   "id": "fae607a1",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d8033a",
+   "id": "9e0739cc",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ecd32769",
+   "execution_count": 15,
+   "id": "59b25dbb",
    "metadata": {},
    "outputs": [
     {
@@ -206,15 +206,15 @@
      "text": [
       "Status: Optimal\n",
       "****************************************\n",
-      "Maximum Cash on Hand at the beginning of Month 5: $377.39\n",
-      "This is the amount we had at the end of the fourth month, $627.39, less the $250 Month 4 Bill\n",
+      "Maximum Cash on Hand at the beginning of Month 5: $372.81\n",
+      "This is the amount we had at the end of the fourth month, $622.81, less the $250 Month 4 Bill\n",
       "****************************************\n",
       "Cash_to_Invest_Month_1_for_four_months = $200.60\n",
       "Cash_to_Invest_Month_1_for_one_month = $599.40\n",
       "Cash_to_Invest_Month_1_for_three_months = $0.00\n",
       "Cash_to_Invest_Month_1_for_two_months = $0.00\n",
-      "Cash_to_Invest_Month_2_for_one_month = $495.05\n",
-      "Cash_to_Invest_Month_2_for_three_months = $107.23\n",
+      "Cash_to_Invest_Month_2_for_one_month = $499.50\n",
+      "Cash_to_Invest_Month_2_for_three_months = $102.78\n",
       "Cash_to_Invest_Month_2_for_two_months = $197.72\n",
       "Cash_to_Invest_Month_3_for_one_month = $300.00\n",
       "Cash_to_Invest_Month_3_for_two_months = $0.00\n",
@@ -252,21 +252,24 @@
     "       month_1_for_four_month <= 800, \n",
     "       \"Beginning of Month 1 has 400 Dollars from Revenue to Invest and 400 Cash\")\n",
     "\n",
-    "fc += (month_2_for_one_month + month_2_for_two_month + month_2_for_three_month <= 800, \n",
+    "fc += (month_2_for_one_month + month_2_for_two_month + month_2_for_three_month +\n",
+    "       ((1.001*month_1_for_one_month) - 600) <= 800, \n",
     "       \"Beginning of Month 2 has 800 Dollars to Invest, plus any money left from a one-month investment after paying our Month 1 Bill\")\n",
     "\n",
-    "fc += (month_3_for_one_month + month_3_for_two_month <= 300, \n",
-    "       \"Beginning of Month 3 has 300 Dollars to Invest, plus any money left investments after paying our Month 1 and 2 Bills\")\n",
+    "fc += (month_3_for_one_month + month_3_for_two_month + \n",
+    "       (((1.01*month_1_for_two_month) + (1.001*month_2_for_one_month)) - 500) <= 300, \n",
+    "       \"Beginning of Month 3 has 300 Dollars to Invest, plus any money left from investments after paying our Month 1 and 2 Bills\")\n",
     "\n",
-    "fc += (month_4_for_one_month <= 300, \n",
-    "       \"Beginning of Month 4 has 300 Dollars to Invest, plus any money left investments after paying our Month 1, 2 and 3 Bills\")\n",
+    "fc += (month_4_for_one_month + (((1.03*month_1_for_three_month) + (1.01*month_2_for_two_month) + \n",
+    "       (1.001*month_3_for_one_month)) - 500) <= 300, \n",
+    "       \"Beginning of Month 4 has 300 Dollars to Invest, plus any money left from investments after paying our Month 1, 2 and 3 Bills\")\n",
     "\n",
     "\n",
     "# Bills to Pay\n",
     "fc += ((1.001*month_1_for_one_month) >= 600, \n",
     "       \"End of Month 1has a Bill that is 600 Dollars\")\n",
     "\n",
-    "fc += ((1.001*month_1_for_two_month) + (1.01*month_2_for_one_month) >= 500, \n",
+    "fc += ((1.01*month_1_for_two_month) + (1.001*month_2_for_one_month) >= 500, \n",
     "       \"End of Month 2 has a Bill that is 500 Dollars\")\n",
     "\n",
     "fc += ((1.03*month_1_for_three_month) + (1.01*month_2_for_two_month) + \n",
@@ -298,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b501c7e",
+   "id": "691986eb",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -318,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e454d52",
+   "id": "3f5debc5",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c7ebdf6",
+   "id": "c628678d",
    "metadata": {},
    "source": [
     "### Question 5: \n",
@@ -413,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6bfc0891",
+   "id": "f9d7d393",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4c3835b",
+   "id": "b480a69d",
    "metadata": {},
    "outputs": [],
    "source": []
