working on assignment

--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8025d587",
+   "id": "e850f354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52937829",
+   "id": "a2f1b980",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ea2be1a",
+   "id": "17d9c06c",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f51caf5e",
+   "id": "d493622b",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "4cb6a4ea",
+   "id": "795d8283",
    "metadata": {},
    "outputs": [
     {
@@ -245,30 +245,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "9eb6f8aa",
+   "cell_type": "markdown",
+   "id": "5f1106a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5\n"
-     ]
-    }
-   ],
    "source": [
-    "x_1 = 3.25\n",
-    "x_2 = 6.75\n",
-    "\n",
-    "print((-4*x_1) + (2*x_2))\n"
+    "#### Verify graphical solution:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "57b2e12d",
+   "id": "222190f0",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c22689",
+   "id": "6af7dc7f",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -346,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bb75f4c6",
+   "id": "4fc7608b",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e33c489",
+   "id": "9fb02320",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -470,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "787a7426",
+   "id": "015146d2",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc67cde",
+   "id": "46cf52a4",
    "metadata": {},
    "source": [
     "### Question 5: \n",
@@ -565,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e51cfe3a",
+   "id": "12c2ce00",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "165292b2",
+   "id": "20f3a73f",
    "metadata": {},
    "outputs": [],
    "source": []
