--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e850f354",
+   "id": "a51af608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f1b980",
+   "id": "2e28bfc8",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "17d9c06c",
+   "execution_count": 176,
+   "id": "8be51c7c",
    "metadata": {},
    "outputs": [
     {
@@ -48,21 +48,15 @@
      "output_type": "stream",
      "text": [
       "Status: Optimal\n",
+      "****************************************\n",
       "Minimum cost: $11,735.29\n",
+      "****************************************\n",
       "Steel_1_Produced_At_Mill_1 = 400.0\n",
       "Steel_1_Produced_At_Mill_2 = 0.0\n",
       "Steel_2_Produced_At_Mill_1 = 117.64706\n",
       "Steel_2_Produced_At_Mill_2 = 382.35294\n",
       "Steel_3_Produced_At_Mill_1 = 0.0\n",
       "Steel_3_Produced_At_Mill_2 = 300.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
-      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
      ]
     }
    ],
@@ -79,11 +73,12 @@
     "sc = LpProblem(\"SteelCo Manufacturing Problem\", LpMinimize)\n",
     "\n",
     "# Objective Function\n",
+    "# We want to minimize our costs, so we add all the steel we produce, multiplied by the cost of each type and by mill\n",
     "sc += (10*steel_1_mill_1 + 11*steel_2_mill_1 + 14*steel_3_mill_1 + \n",
     "       12*steel_1_mill_2 + 9*steel_2_mill_2 + 10*steel_3_mill_2, \"Total cost\")\n",
     "\n",
     "# Constraints\n",
-    "# Blast Furnance time available\n",
+    "# Blast Furnance time available - we have limited hours per mill\n",
     "sc += (20*steel_1_mill_1 + 22*steel_2_mill_1 + 28*steel_3_mill_1 <= 200*60, \n",
     "         \"Mill 1 has 200 hours of blast furnace time available\")\n",
     "sc += (24*steel_1_mill_2 + 18*steel_2_mill_2 + 30*steel_3_mill_2 <= 300*60, \n",
@@ -95,7 +90,7 @@
     "sc += (1*steel_2_mill_1 + 1*steel_2_mill_2 >= 500, \"Steel 2 Manufactured\")\n",
     "sc += (1*steel_3_mill_1 + 1*steel_3_mill_2 >= 300, \"Steel 3 Manufactured\")\n",
     "\n",
-    "## the total amount of Steel 2 manufactured should not exceed the combined amount of Steel 1 and Steel 3\n",
+    "## The total amount of Steel 2 manufactured should not exceed the combined amount of Steel 1 and Steel 3\n",
     "sc += (steel_2_mill_1 + steel_2_mill_2 <= steel_1_mill_1 + steel_1_mill_2 + steel_3_mill_1 + steel_3_mill_2, \n",
     "       \"Steel 2 should not exceed the combined amount of Steel 1 and Steel 3\")\n",
     "\n",
@@ -105,7 +100,7 @@
     "       (0.08*steel_1_mill_2 + 0.06*steel_2_mill_2 + 0.1*steel_3_mill_2), \n",
     "         \"Uniform usage of the two mills\")\n",
     "\n",
-    "## Greater than 0 constraints\n",
+    "## Greater than 0 constraints - we can't produce negative steel\n",
     "sc += (steel_1_mill_1 >= 0, \"Steel 1 Mill 1 Non-negative Constraint\")\n",
     "sc += (steel_2_mill_1 >= 0, \"Steel 2 Mill 1 Non-negative Constraint\")\n",
     "sc += (steel_3_mill_1 >= 0, \"Steel 3 Mill 1 Non-negative Constraint\")\n",
@@ -118,14 +113,16 @@
     "\n",
     "# Print the solution\n",
     "print(f\"Status: {LpStatus[status]}\")\n",
-    "print(f\"Minimum cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
+    "print(\"*\"*40)\n",
+    "print(f\"Minimum cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thousands\n",
+    "print(\"*\"*40)\n",
     "for v in sc.variables():\n",
     "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d493622b",
+   "id": "f62beaaa",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -140,9 +137,15 @@
     "x<sub>1</sub> ≥ 2     \n",
     "x<sub>1</sub> - 4x<sub>2</sub> ≤ 0     \n",
     "2x<sub>1</sub> + 2x<sub>2</sub> ≥ 10     \n",
-    "x<sub>1</sub>, x<sub>2</sub> ≥ 0    \n",
-    " \n",
-    "#### Part A:\n",
+    "x<sub>1</sub>, x<sub>2</sub> ≥ 0    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52b3371e",
+   "metadata": {},
+   "source": [
+    "### Part A:\n",
     "Write the LP in standard equality form. \n",
     "\n",
     "Standard form:\n",
@@ -164,10 +167,15 @@
     "\n",
     "x<sub>1</sub>, x<sub>2</sub>, s<sub>1</sub>, s<sub>2</sub>, s<sub>3</sub>, s<sub>4</sub> ≥ 0   \n",
     "&check; Variables must be non-negative &check;\n",
-    " \n",
-    "\n",
-    " \n",
-    "#### Part B: \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b5303f6",
+   "metadata": {},
+   "source": [
+    "### Part B: \n",
     "Solve the original LP graphically (to scale).  Clearly identify the feasible region and, if one or \n",
     "more exist, the optimal solution(s) (provide exact values for x1, x2, and Z). "
    ]
@@ -175,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "795d8283",
+   "id": "d4d271e4",
    "metadata": {},
    "outputs": [
     {
@@ -246,16 +254,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f1106a5",
+   "id": "1caf8eeb",
    "metadata": {},
    "source": [
-    "#### Verify graphical solution:"
+    "#### Verifying the graphical solution:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "222190f0",
+   "id": "d04e6090",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af7dc7f",
+   "id": "cbe6d488",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -327,13 +335,13 @@
     "| 4 | 300 | 250  |\n",
     "\n",
     "\n",
-    "Regarding Question 3, the objective is to maximize the amount of cash on hand at the beginning of Period 5.  (Not necessarily to maximize profit.)"
+    "Note from discussion: Regarding Question 3, the objective is to maximize the amount of cash on hand at the beginning of Period 5.  (Not necessarily to maximize profit.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4fc7608b",
+   "id": "5d509453",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb02320",
+   "id": "ccb2146d",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -457,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "015146d2",
+   "id": "5cb2f32e",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46cf52a4",
+   "id": "19061260",
    "metadata": {},
    "source": [
     "### Question 5: \n",
@@ -552,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "12c2ce00",
+   "id": "7ddff0c2",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f3a73f",
+   "id": "4c717292",
    "metadata": {},
    "outputs": [],
    "source": []
