--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "a51af608",
+   "execution_count": 1,
+   "id": "e9320869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e28bfc8",
+   "id": "a35f77c3",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "8be51c7c",
+   "execution_count": 2,
+   "id": "237bf9d3",
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +57,14 @@
       "Steel_2_Produced_At_Mill_2 = 382.35294\n",
       "Steel_3_Produced_At_Mill_1 = 0.0\n",
       "Steel_3_Produced_At_Mill_2 = 300.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
      ]
     }
    ],
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62beaaa",
+   "id": "447c13fc",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -142,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b3371e",
+   "id": "3f5cb564",
    "metadata": {},
    "source": [
     "### Part A:\n",
@@ -172,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5303f6",
+   "id": "9860113b",
    "metadata": {},
    "source": [
     "### Part B: \n",
@@ -182,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "d4d271e4",
+   "execution_count": 3,
+   "id": "60d1fbfc",
    "metadata": {},
    "outputs": [
     {
@@ -198,9 +206,6 @@
     }
    ],
    "source": [
-    "# https://paulminogue.com/posts/71924725-4c6f-46eb-b732-b5806ddc0152#heading-6fad651e-2fff-49b7-85a0-5d2ada387059\n",
-    "# https://stackoverflow.com/questions/57017444/how-to-visualize-feasible-region-for-linear-programming-with-arbitrary-inequali\n",
-    "\n",
     "# define variables\n",
     "x_1 = np.linspace(0, 30, 2000) # generates 2000 linearly spaced numbers\n",
     "x_2 = np.linspace(0, 30, 2000) # generates 2000 linearly spaced numbers\n",
@@ -254,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1caf8eeb",
+   "id": "00ee7c17",
    "metadata": {},
    "source": [
     "#### Verifying the graphical solution:"
@@ -262,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "d04e6090",
+   "execution_count": 4,
+   "id": "74e7bbea",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe6d488",
+   "id": "39e627d0",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -340,8 +345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5d509453",
+   "execution_count": 5,
+   "id": "4f527aeb",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb2146d",
+   "id": "094603e0",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -464,8 +469,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5cb2f32e",
+   "execution_count": 6,
+   "id": "b831e15b",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19061260",
+   "id": "2d8f9d46",
    "metadata": {},
    "source": [
     "### Question 5: \n",
@@ -559,8 +564,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7ddff0c2",
+   "execution_count": 7,
+   "id": "d39cc445",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c717292",
+   "id": "07de1d8b",
    "metadata": {},
    "outputs": [],
    "source": []
