working on problem 2 from homework

--- a/Homework Assignment 2.ipynb
+++ b/Homework Assignment 2.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5a92490e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize, GLPK"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b82d3b98",
+   "id": "ae20817f",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -19,7 +29,7 @@
     "$$x_1 ≤ 0, x_2 ≥ 0, x_3\\text{ unrestricted}$$\n",
     "\n",
     "\n",
-    "### Answer:\n",
+    "## Answer:\n",
     "\n",
     "__Minimize__ $$20y_1 + 6y_2 - 5y_3 + 4y_4$$\n",
     "__Subject To__\n",
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5155f025",
+   "id": "ae31022e",
    "metadata": {},
    "source": [
     "1B.  Given the following information for a product-mix problem with three products and three resources. \n",
@@ -59,9 +69,9 @@
     "\n",
     "__Optimal Solution:__      \n",
     "Optimal Z = Revenue = \\\\$268.75   \n",
-    "$$x1 = 0 \\text{(Number of unit 1)}$$  \n",
-    "$$x2 = 8.125 \\text{(Number of unit 2)}$$   \n",
-    "$$x3 = 1.25 \\text{(Number of unit 3)}$$   \n",
+    "$$x1 = 0 \\text{ (Number of unit 1)}$$  \n",
+    "$$x2 = 8.125 \\text{ (Number of unit 2)}$$   \n",
+    "$$x3 = 1.25 \\text{ (Number of unit 3)}$$   \n",
     "\n",
     "Dual Var. Optimal Value = 22.5 (Surplus variable in 1st dual constraint)   \n",
     "Dual Var. Optimal Value = 0 (Surplus variable in 2nd dual constraint)   \n",
@@ -76,17 +86,169 @@
     "Dual Var. Optimal Value = 5.625 = π2   \n",
     "Dual Var. Optimal Value = 0 = π3    \n",
     " \n",
-    "__1Bi. What is the fair-market price for one unit of Resource 3?__   \n",
+    "## __1Bi. What is the fair-market price for one unit of Resource 3?__   \n",
     "\\\\$0.  This is because the optimal solution of the dual is the vector of shadow prices (https://web.stanford.edu/~ashishg/msande111/notes/chapter4.pdf).  In this case, the shadow price is 0, so the company would not be willing to pay anything for one unit of resource 3 since it will not impact the outcome - the optimized revenue of \\\\268.75 would not change. \n",
     " \n",
-    "__1Bii. What is the meaning of the surplus variable value of 22.5 in the 1st dual constraint with respect to the primal problem?__\n",
-    " "
+    "## __1Bii. What is the meaning of the surplus variable value of 22.5 in the 1st dual constraint with respect to the primal problem?__\n",
+    "\n",
+    "This is the equivalent of the shadow price of unit 1 from the primal - the optimal solution to the dual provides shadow prices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "440aa82e",
+   "metadata": {},
+   "source": [
+    "# Question 2: \n",
+    "\n",
+    "Carco manufactures cars and trucks.  Each car contributes \\\\$300 to profit and each truck, \\\\$400; these profits do not consider machine rental.  The resources required to manufacture a car and a truck are shown below.  Each day \n",
+    "Carco can rent up to 98 Type 1 machines at a cost of \\\\$50 per machine.  The company now has 73 Type 2 machines \n",
+    "and 260 tons of steel available.  Marketing considerations dictate that at least 88 cars and at least 26 trucks be \n",
+    "produced. \n",
+    "\n",
+    "|Vehicle Type  |Days On Machine 1|Days on Machine 2|Tons of Steel  |\n",
+    "|-----|---|---|---|\n",
+    "|Car  |0.8|0.6|2  |\n",
+    "|Truck|1  |0.7|3  |\n",
+    " \n",
+    "__Part A:  Formulate the problem as a Linear Program.__  \n",
+    "\n",
+    "__Part B:  Solve the LP (provide exact values for all variables and the optimal objective function).__    \n",
+    "Hint:  The optimal objective function value is $32540 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0e7c61a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Objective 32540.0\n",
+      "cars = 88.0\n",
+      "trucks = 27.6\n",
+      "type_1_machines = 98.0\n",
+      "type_2_machines = 72.12\n",
+      "\n",
+      "GLPK 5.0  - SENSITIVITY ANALYSIS REPORT                                                                         Page   1\n",
+      "\n",
+      "Problem:    \n",
+      "Objective:  OBJ = 32540 (MAXimum)\n",
+      "\n",
+      "   No. Row name     St      Activity         Slack   Lower bound       Activity      Obj coef  Obj value at Limiting\n",
+      "                                          Marginal   Upper bound          range         range   break point variable\n",
+      "------ ------------ -- ------------- ------------- -------------  ------------- ------------- ------------- ------------\n",
+      "     1 Carco_can_rent_up_to_98_Type_1_machines\n",
+      "                    NU      98.00000        .               -Inf       96.40000    -350.00000   31980.00000 Marketing_considerations_dictate_that_at_least_26_trucks_be_produced\n",
+      "                                         350.00000      98.00000       98.40000          +Inf   32680.00000 The_company_has_260_tons_of_steel_available\n",
+      "\n",
+      "     2 Carco_now_has_73_Type_2_machines\n",
+      "                    BS      72.12000        .88000          -Inf       71.00000    -500.00000   -3520.00000 Carco_can_rent_up_to_98_Type_1_machines\n",
+      "                                            .           73.00000       72.20000     500.00000   68600.00000 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
+      "\n",
+      "     3 Cars_and_trucks_take_up_type_1_machine_time\n",
+      "                    NS        .             .             .                -Inf          -Inf          -Inf\n",
+      "                                          50.00000        .            98.00000          +Inf   37440.00000 type_1_machines\n",
+      "\n",
+      "     4 Cars_and_trucks_take_up_type_2_machine_time\n",
+      "                    NU        .             .               -Inf           -Inf        .        32540.00000\n",
+      "                                            .             .            72.12000          +Inf   32540.00000 type_2_machines\n",
+      "\n",
+      "     5 Marketing_considerations_dictate_that_at_least_26_trucks_be_produced\n",
+      "                    BS      27.60000      -1.60000      26.00000       10.00000     -25.00000   31850.00000 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
+      "                                            .               +Inf       27.60000          +Inf          +Inf\n",
+      "\n",
+      "     6 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
+      "                    NL      88.00000        .           88.00000       85.00000          -Inf   32600.00000 The_company_has_260_tons_of_steel_available\n",
+      "                                         -20.00000          +Inf       90.00000      20.00000   32500.00000 Marketing_considerations_dictate_that_at_least_26_trucks_be_produced\n",
+      "\n",
+      "     7 The_company_has_260_tons_of_steel_available\n",
+      "                    BS     258.80000       1.20000          -Inf      258.00000     -50.00000   19600.00000 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
+      "                                            .          260.00000      258.80000          +Inf          +Inf\n",
+      "\n",
+      "GLPK 5.0  - SENSITIVITY ANALYSIS REPORT                                                                         Page   2\n",
+      "\n",
+      "Problem:    \n",
+      "Objective:  OBJ = 32540 (MAXimum)\n",
+      "\n",
+      "   No. Column name  St      Activity      Obj coef   Lower bound       Activity      Obj coef  Obj value at Limiting\n",
+      "                                          Marginal   Upper bound          range         range   break point variable\n",
+      "------ ------------ -- ------------- ------------- -------------  ------------- ------------- ------------- ------------\n",
+      "     1 cars         BS      88.00000     300.00000        .            88.00000          -Inf          -Inf\n",
+      "                                            .               +Inf       90.00000     320.00000   34300.00000 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
+      "\n",
+      "     2 trucks       BS      27.60000     400.00000        .            26.00000     375.00000   31850.00000 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
+      "                                            .               +Inf       27.60000          +Inf          +Inf\n",
+      "\n",
+      "     3 type_1_machines\n",
+      "                    BS      98.00000     -50.00000        .            96.40000    -400.00000   -1760.00000 Carco_can_rent_up_to_98_Type_1_machines\n",
+      "                                            .               +Inf       98.00000          +Inf          +Inf\n",
+      "\n",
+      "     4 type_2_machines\n",
+      "                    BS      72.12000        .             .            71.00000    -500.00000   -3520.00000 Carco_can_rent_up_to_98_Type_1_machines\n",
+      "                                            .               +Inf           +Inf        .        32540.00000 Cars_and_trucks_take_up_type_2_machine_time\n",
+      "\n",
+      "End of report\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem\n",
+    "# define variables\n",
+    "cars = LpVariable(\"cars\", 0, None)\n",
+    "trucks = LpVariable(\"trucks\", 0, None)\n",
+    "type_1_machines = LpVariable(\"type_1_machines\", 0, None)\n",
+    "type_2_machines = LpVariable(\"type_2_machines\", 0, None)\n",
+    "\n",
+    "# defines the problem\n",
+    "prob2 = LpProblem(\"CarCo Problem\", LpMaximize)\n",
+    "\n",
+    "# define objective function - Maximize profit\n",
+    "prob2 += 300*cars + 400*trucks - (type_1_machines*50)\n",
+    "\n",
+    "# define constraints\n",
+    "prob2 += (.8*cars + trucks <= 98, 'Carco can rent up to 98 Type 1 machines')\n",
+    "prob2 += (.8*cars + trucks == type_1_machines, 'Cars and trucks take up type 1 machine time')\n",
+    "prob2 += (.6*cars + .7*trucks <= 73, 'Carco now has 73 Type 2 machines')\n",
+    "prob2 += (.6*cars + .7*trucks <= type_2_machines, 'Cars and trucks take up type 2 machine time')\n",
+    "prob2 += (2*cars + 3*trucks <= 260, 'The company has 260 tons of steel available')\n",
+    "prob2 += (cars >= 88, 'Marketing considerations dictate that at least 88 cars be produced')\n",
+    "prob2 += (trucks >= 26, 'Marketing considerations dictate that at least 26 trucks be produced')\n",
+    "\n",
+    "# solve the problem\n",
+    "prob2.writeLP(\"prob2.lp\")\n",
+    "prob2.solve(GLPK(msg=0, options=['--ranges', 'prob2.sen']))\n",
+    "print (\"Status:\", LpStatus[prob2.status])\n",
+    "\n",
+    "# Note, we are only able to get sensitivity information because we are solving\n",
+    "# as a linear program.  If we solved as an Integer Program, then no \n",
+    "# sensitivity information would be available.\n",
+    "print (\"Objective\", value(prob2.objective))\n",
+    "for v in prob2.variables():\n",
+    "    print(v.name, \"=\", v.varValue)\n",
+    "print (\"\")\n",
+    "\n",
+    "f = open(\"prob2.sen\", \"r\")\n",
+    "print(f.read())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34fbd90d",
+   "id": "7d3fd766",
    "metadata": {},
    "outputs": [],
    "source": []
