still working on problem 2

--- a/Homework Assignment 2.ipynb
+++ b/Homework Assignment 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5a92490e",
+   "id": "fe870ed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae20817f",
+   "id": "2af7c56e",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae31022e",
+   "id": "03f8816b",
    "metadata": {},
    "source": [
     "1B.  Given the following information for a product-mix problem with three products and three resources. \n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440aa82e",
+   "id": "d7418267",
    "metadata": {},
    "source": [
     "# Question 2: \n",
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0e7c61a4",
+   "execution_count": 17,
+   "id": "2d6b8e96",
    "metadata": {},
    "outputs": [
     {
@@ -246,9 +246,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cb906b7",
+   "metadata": {},
+   "source": [
+    "__Part C:  Answer the following questions from your output.  (Note, do not simply rerun the model – use the Linear \n",
+    "Programming output and Sensitivity Analysis to explain your answers.)__     \n",
+    "i)  If cars contributed \\\\$310 to profit, what would be the new optimal solution to the problem?     \n",
+    "* Since the objective range coefficient is between 0 and 320, in this case, increasing it to 310 will not change the number of cars or trucks produced, it will simply increase the profit.  So, since we are producing 88 cars in this model and we increased car profit by $10, 88 * 10 = 880, so the new profit/optimal solution would be \\\\$32540 + \\\\$880 = __\\\\$33420__\n",
+    "\n",
+    "ii) What is the most that Carco should be willing to pay to rent an additional Type 1 machine for 1 day?     \n",
+    "iii) What is the most that Carco should be willing to pay for an extra ton of steel?    \n",
+    "iv) If Carco were required to produce at least 86 cars, what would Carco’s profit become?    \n",
+    "v) Carco is considering producing jeeps.  A jeep contributes $600 to profit and requires 1.2 days on machine 1, 2 \n",
+    "days on machine 2, and 4 tons of steel.  Should Carco produce any jeeps?    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d3fd766",
+   "id": "89836e08",
    "metadata": {},
    "outputs": [],
    "source": []
