--- a/Week 4 Discussion-Networks, Duality, Sensitivity.ipynb
+++ b/Week 4 Discussion-Networks, Duality, Sensitivity.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2b1c5610",
+   "id": "8b49a3be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1876882c",
+   "id": "bfcc23ea",
    "metadata": {},
    "source": [
     "__Part 1.__\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "02a1e02b",
+   "id": "dd5add22",
    "metadata": {
     "scrolled": false
    },
@@ -348,6 +348,7 @@
     "for v in bmc_problem.variables():\n",
     "    print(f'Number of {v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros\n",
     "\n",
+    "## With GLPK\n",
     "bmc_problem.solve(GLPK(msg=1, options=['--ranges', 'bmc_problem.sen']))\n",
     "print(\"Status:\", LpStatus[bmc_problem.status])\n",
     "\n",
@@ -366,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c37ad333",
+   "id": "336fb2a2",
    "metadata": {},
    "outputs": [],
    "source": []
